examples/negative/pub_enforcement/violation_transitive/mid.kai
import leaf

pub fn mid_through_leaf() : Int = leaf.leaf_public()
